add second model setting

--- a/final-project/notebook_lpzhong.ipynb
+++ b/final-project/notebook_lpzhong.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "source": [
     "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/training_train/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/training_test/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/training_train/training_idx_15.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/training_test/training_idx_1.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -61,11 +61,8 @@
    "source": [
     "<br>\n",
     "<br>\n",
-    "The predicted hidden variables for training and testing are:<br>\n",
-    "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_result_2dtrain/hidden_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_result_2dtest/hidden_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "</tr></table>"
+    "The loss and MSE during training is:<br>\n",
+    "<img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 500px\"/>"
    ]
   },
   {
@@ -82,8 +79,8 @@
    "metadata": {},
    "source": [
     "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_compare_train/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_compare_train/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/hidden_compare_train/hidden_dim_0_idx_15.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/hidden_compare_train/hidden_dim_1_idx_15.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -95,8 +92,8 @@
     "<br>\n",
     "The comparison between true and predicted value for testing hidden:<br>\n",
     "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_compare_test/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/hidden_compare_test/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/hidden_compare_test/hidden_dim_0_idx_1.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/hidden_compare_test/hidden_dim_1_idx_1.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -108,8 +105,8 @@
     "<br>\n",
     "The comparison between true and predicted value for training observation:<br>\n",
     "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/obs_compare_train/obs_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/obs_compare_train/obs_dim_0_idx_15.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/obs_compare_train/obs_dim_1_idx_15.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -121,8 +118,33 @@
     "<br>\n",
     "The comparison between true and predicted value for testing observation:<br>\n",
     "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
-    "<td> <img src=\"experiments/linear/True_1/obs_compare_test/obs_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/obs_compare_test/obs_dim_0_idx_1.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/linear/True_1/obs_compare_test/obs_dim_1_idx_1.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "The second f and g model we let our VRNN model learn is:<br>\n",
+    "f: Fhn model with Delta distribution. Fhn param: (1.0, 0.95, 0.05, 1.0, 0.15)<br>\n",
+    "g: linear model with MVN distribution. Linear param: [[0,1]], MVN sigma: 0.2 * eye(1)<br>\n",
+    "\n",
+    "We set the length of time series to be 100 and trained our model for 100 epoches.<br>\n",
+    "Our training and testing data generated is as below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/training_train/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/training_test/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
     "</tr></table>"
    ]
   },
@@ -133,7 +155,59 @@
     "<br>\n",
     "<br>\n",
     "The loss and MSE during training is:<br>\n",
-    "<img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"float:left, width: 400px\"/>"
+    "<img src=\"experiments/fhn/[0,1]_True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 500px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparsion between true value and predicted value for training hidden:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/hidden_compare_train/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/hidden_compare_train/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison between true and predicted value for testing hidden:<br>\n",
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/hidden_compare_test/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/hidden_compare_test/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison between true and predicted value for training observation:<br>\n",
+    "<img src=\"experiments/fhn/[0,1]_True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison between true and predicted value for testing observation:<br>\n",
+    "<img src=\"experiments/fhn/[0,1]_True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
   },
   {
