small size change

--- a/final-project/notebook_lpzhong.ipynb
+++ b/final-project/notebook_lpzhong.ipynb
@@ -62,7 +62,9 @@
     "<br>\n",
     "<br>\n",
     "The loss and MSE during training is:<br>\n",
-    "<img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/>"
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/> </td>\n",
+    "</tr></table>"
    ]
   },
   {
