--- a/final-project/notebook_lpzhong.ipynb
+++ b/final-project/notebook_lpzhong.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,7 @@
     "<br>\n",
     "<br>\n",
     "The loss and MSE during training is:<br>\n",
-    "<table><tr>\n",
-    "<td> <img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/> </td>\n",
-    "</tr></table>"
+    "<img src=\"experiments/linear/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/>"
    ]
   },
   {
@@ -198,8 +196,174 @@
    "source": [
     "<br>\n",
     "<br>\n",
+    "The comparison for training and testing observation\n",
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[0,1]_True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "The third f and g model we let our VRNN model learn is:<br>\n",
+    "f: Fhn model with Delta distribution. Fhn param: (1.0, 0.95, 0.05, 1.0, 0.15)<br>\n",
+    "g: linear model with MVN distribution. Linear param: [[1,1]], MVN sigma: 0.2 * eye(1)<br>\n",
+    "\n",
+    "We set the length of time series to be 100 and trained our model for 100 epoches.<br>\n",
+    "Our training and testing data generated is as below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/training_train/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/training_test/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The loss and MSE during training is:<br>\n",
+    "<img src=\"experiments/fhn/[1,1]_True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparsion between true value and predicted value for training hidden:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/hidden_compare_train/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/hidden_compare_train/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison between true and predicted value for testing hidden:<br>\n",
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/hidden_compare_test/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/hidden_compare_test/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison for training and testing observation\n",
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/fhn/[1,1]_True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "The fourth f and g model we let our VRNN model learn is:<br>\n",
+    "f: Lorenz model with Delta distribution. Lorenz param: (10.0, 28.0, 8.0 / 3.0, 0.01)<br>\n",
+    "g: linear model with MVN distribution. Linear param: np.random.randn(3, 3), MVN sigma: 0.2 * eye(3)<br>\n",
+    "\n",
+    "We set the length of time series to be 200 and trained our model for 100 epoches.<br>\n",
+    "Our training and testing data generated is as below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/training_train/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/training_test/training_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The loss and MSE during training is:<br>\n",
+    "<img src=\"experiments/lorenz/True_1/loss_and_MSE.png\" alt=\"Drawing\" style=\"width: 400px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparsion between true value and predicted value for training hidden:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_train/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_train/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_train/hidden_dim_2_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "The comparison between true and predicted value for testing hidden:<br>\n",
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_test/hidden_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_test/hidden_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/hidden_compare_test/hidden_dim_2_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
     "The comparison between true and predicted value for training observation:<br>\n",
-    "<img src=\"experiments/fhn/[0,1]_True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_train/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_train/obs_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_train/obs_dim_2_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
    ]
   },
   {
@@ -209,15 +373,51 @@
     "<br>\n",
     "<br>\n",
     "The comparison between true and predicted value for testing observation:<br>\n",
-    "<img src=\"experiments/fhn/[0,1]_True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<table><tr>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_test/obs_dim_0_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_test/obs_dim_1_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "<td> <img src=\"experiments/lorenz/True_1/obs_compare_test/obs_dim_2_idx_0.png\" alt=\"Drawing\" style=\"float:left, width: 400px;\"/> </td>\n",
+    "</tr></table>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "## Improved Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the improvements of the model, we still first let the model learn the f and g from generated data.<br>\n"
+   ]
   }
  ],
  "metadata": {
