add conclusion, future work and reference

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "#### Variational Recurrent Neural Network (VRNN)\n",
-    "Finally, we move to the core idea behind this project, Variational Recurrent Neural Network (VRNN) [[chung2015recurrent](https://arxiv.org/abs/1506.02216)]. The VRNN contains a VAE at every timestep, but the VAEs are conditioned on the internal state variable $h_{t-1}$ of an RNN. This will help the VAE to take into account the temporal relationship in sequential data. In our project, long short-term memory (LSTM) is used as the RNN model.\n",
+    "Finally, we move to the core idea behind this project, Variational Recurrent Neural Network (VRNN) [[chung2015recurrent](http://papers.nips.cc/paper/5653-a-recurrent-latent-variable-model-for-sequential-data)]. The VRNN contains a VAE at every timestep, but the VAEs are conditioned on the internal state variable $h_{t-1}$ of an RNN. This will help the VAE to take into account the temporal relationship in sequential data. In our project, long short-term memory (LSTM) is used as the RNN model.\n",
     "\n",
     "\n",
     "The VRNN contains following operations, and the following image is an illustration of them:\n",
@@ -67,7 +67,7 @@
     "<br><br><br>\n",
     "\n",
     "\n",
-    "<img src=\"doc_imgs/VRNN.png\" alt=\"Drawing\" style=\"width: 1400px\"/>\n",
+    "<img src=\"doc_imgs/Colored_VRNN.png\" alt=\"Drawing\" style=\"width: 900px\"/>\n",
     "<br><br><br>\n",
     "\n",
     "Again, the parameters in all network are learned by optimizing following ELBO:\n",
@@ -144,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -288,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "myVRNNCell = VRNNCell(Dx=Dx,\n",
@@ -330,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -385,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -430,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -891,7 +901,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -905,7 +917,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from model import VRNNCell, VRNN_model\n",
@@ -977,7 +991,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "obs_train, obs_test = get_stock_data(\"dow_jones\", time, n_train, n_test, Dx)\n",
@@ -994,7 +1010,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "myVRNNCell = VRNNCell(Dx=Dx,\n",
@@ -1016,7 +1034,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mytrainer = trainer(model)\n",
@@ -1028,6 +1048,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1075,7 +1096,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Again, we can compare how accurate the predicted observation is "
@@ -1084,7 +1107,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1712,7 +1737,36 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Conclusion and Future Works\n",
+    "\n",
+    "Through iteration of Box's loop, our project shows the following:\n",
+    "* The Variational Recurrent Neural Network can be used for accurate predictions.\n",
+    "* Learning the initial state for VRNN with bidirectional RNN can improve prediction accuracy.\n",
+    "* Importance Weight Auto-Encoder can be a promising technique to merge into VRNN.\n",
+    "\n",
+    "The encouraging results of VRNN and remained unfinished experiments on IWAE motive our group to look further into this topic. \n",
+    "* We would apply IWAE to stock data, and check how the performance improves as number of samples $k$ increases.\n",
+    "* Learning from the idea of particle filtering, [[le2017auto](https://arxiv.org/abs/1705.10306)] and [[maddison2017filtering](https://arxiv.org/abs/1705.09279)] proposes models similar to IWAE but with resampling at every/a certain timestep, and those models achieve better performance on sequential data. It would be interesting to build similar models to apply to stock data and check the performance improvement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference\n",
+    "[[kingma2013auto](https://arxiv.org/abs/1312.6114)] Kingma, Diederik P., and Max Welling. \"Auto-encoding variational bayes.\" arXiv preprint arXiv:1312.6114 (2013).\n",
+    "\n",
+    "[[chung2015recurrent](http://papers.nips.cc/paper/5653-a-recurrent-latent-variable-model-for-sequential-data)] Chung, Junyoung, et al. \"A recurrent latent variable model for sequential data.\" Advances in neural information processing systems. 2015.\n",
+    "\n",
+    "[[burda2015importance](https://arxiv.org/abs/1509.00519)] Burda, Yuri, Roger Grosse, and Ruslan Salakhutdinov. \"Importance weighted autoencoders.\" arXiv preprint arXiv:1509.00519 (2015).\n",
+    "\n",
+    "[[sussillo2016lfads](https://arxiv.org/abs/1608.06315)] Sussillo, David, et al. \"LFADS-latent factor analysis via dynamical systems.\" arXiv preprint arXiv:1608.06315 (2016).\n",
+    "\n",
+    "[[le2017auto](https://arxiv.org/abs/1705.10306)] Le, Tuan Anh, et al. \"Auto-Encoding Sequential Monte Carlo.\" arXiv preprint arXiv:1705.10306 (2017).\n",
+    "\n",
+    "[[maddison2017filtering](https://arxiv.org/abs/1705.09279)] Maddison, Chris J., et al. \"Filtering variational objectives.\" Advances in Neural Information Processing Systems. 2017."
+   ]
   }
  ],
  "metadata": {
@@ -1731,7 +1785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
