fix unknown char in notebook

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -47,15 +47,7 @@
    "source": [
     "#### Time Series Models\n",
     "\n",
-    "Time series models are probabilistic models over a sequence of hidden states (hidden variables) $z_{1:T}$ and observations $x_{1:T}$.\n",
-    "\n",
-    "A time series model is characterized by an initial distribution $\\nu(z_1)$, a series\n",
-    "of transition distributions $f_{t}(z_t|z_{1:t−1}, x_{1:t−1})$, and a series of emission distributions $g_{t}(x_t|z_{1:t}, x_{1:t-1})$ with the joint distribution being $p(z_{1:T}, x_{1:T}) = \\nu(z_1) \\prod_{t=2}^T f_{t}(z_t|z_{1:t−1}, x_{1:t−1}) \\prod_{t=1}^T g_{t}(x_t|z_{1:t}, x_{1:t-1})$.\n",
-    "\n",
-    "One simplification of time series model is the Hidden Markov Model (HMM) which is shown below. For HMM, transition distributions are simplified to $f(z_t|z_{t−1})$ and emission distributions to $g(x_t|z_t)$ with the joint $p(z_{1:T}, x_{1:T}) = \\nu(z_1) \\prod_{t=2}^T f(z_t|z_{t−1}) \\prod_{t=1}^T g(x_t|z_t)$.\n",
-    "\n",
-    "\n",
-    "<img src=\"doc_imgs/hmm.png\" alt=\"Drawing\" style=\"width: 500px\"/>"
+    "<img src=\"doc_imgs/time_series.png\" alt=\"Drawing\" style=\"width: 1200px\"/>"
    ]
   },
   {
@@ -78,17 +70,11 @@
     "#### Variational Auto-Encoder (VAE)\n",
     "In many cases, the transition distribution $f$ and emission distribution $g$ are unknown, and we want to learn them from observations. One important idea supporting us to do is Variational Auto-Encoders (VAE) [[kingma2013](https://arxiv.org/abs/1312.6114)].\n",
     "\n",
-    "<img src=\"doc_imgs/vae.png\" alt=\"Drawing\" style=\"width: 500px\"/>\n",
+    "<img src=\"doc_imgs/vae_model.png\" alt=\"Drawing\" style=\"width: 500px\"/>\n",
     "\n",
     "The image reference: [[vae_img](https://blog.shazam.com/learning-to-understand-music-from-shazam-56a60788b62f)]\n",
     "\n",
-    "A VAE jointly models the generative process from hidden variables $z$ to data $x$, and the recognition process from observed data $x$ to hidden variables $z$, using two distinct neural networks. The recoginition network $q_\\phi(z|x^{(i)})$, also called encoder, derives a distribution over possible values of $z$ to approximate the posterior $p(z|x)$, given an observed datapoint $x^{(i)}$. The generative network $p_\\theta(x|z)$, also called decoder, generates a distribution over possible values of $x$ given hidden variables $z$. $\\theta$ and $\\phi$ are parameters of generative networks and recoginition networks seperately, and they are learned by optimizing Evidence Lower Bound (ELBO):\n",
-    "\n",
-    "\n",
-    "<img src=\"doc_imgs/VAE_ELBO.png\" alt=\"Drawing\" style=\"width: 350px\"/>\n",
-    "\n",
-    "\n",
-    "As you may notice, the ELBO of VAE is quite close to the one in the lecture about Variation Inference, expect that $q(z)$ is changed to $q_\\phi(z|x)$."
+    "<img src=\"doc_imgs/VAE.png\" alt=\"Drawing\" style=\"width: 1100px\"/>"
    ]
   },
   {
@@ -101,10 +87,9 @@
     "\n",
     "The VRNN contains following operations, and the following image is an illustration of them:\n",
     "* prior: $z_t \\sim \\mathcal{N}(\\mu_{prior,t}, \\text{diag}(\\sigma_{prior,t}^2))$, where $[\\mu_{prior,t}, \\sigma_{prior,t}]=\\varphi^{prior}(h_{t-1})$\n",
-    "* recognition (encoder): $z_t|x_t \\sim \\mathcal{N}(\\mu_{enc,t}, \\text{diag}(\\sigma_{enc,t}^2))$, where $[\\mu_{enc,t}, \\sigma_{enc,t}]=\\varphi^{enc}(\\varphi^{x}(x_t), h_{t-1})$\n",
-    "* generation (decoder): $x_t|z_t \\sim \\mathcal{N}(\\mu_{dec,t}, \\text{diag}(\\sigma_{dec,t}^2))$, where $[\\mu_{dec,t}, \\sigma_{dec,t}]=\\varphi^{dec}(\\varphi^{z}(z_t), h_{t-1})$\n",
-    "* feature extraction from $x_t$ and $z_t$, respectively: $\\varphi^{x}$ and $\\varphi^{z}$\n",
-    "* RNN update: $h_t=u(\\varphi^{x}(x_t), \\varphi^{z}(z_t), h_{t-1})$\n",
+    "* recognition (encoder): $z_t|x_t \\sim \\mathcal{N}(\\mu_{enc,t}, \\text{diag}(\\sigma_{enc,t}^2))$, where $[\\mu_{enc,t}, \\sigma_{enc,t}]=\\varphi^{enc}(x_t, h_{t-1})$\n",
+    "* generation (decoder): $x_t|z_t \\sim \\mathcal{N}(\\mu_{dec,t}, \\text{diag}(\\sigma_{dec,t}^2))$, where $[\\mu_{dec,t}, \\sigma_{dec,t}]=\\varphi^{dec}(z_t, h_{t-1})$\n",
+    "* RNN update: $h_t=u(x_t, z_t, h_{t-1})$\n",
     "<br><br><br>\n",
     "\n",
     "\n",
@@ -113,16 +98,14 @@
     "\n",
     "Again, the parameters in all network are learned by optimizing following ELBO:\n",
     "\n",
-    "<img src=\"doc_imgs/VRNN_ELBO.png\" alt=\"Drawing\" style=\"width: 700px\"/>\n",
-    "\n",
-    "From above, the VRNN can learn the prior network $\\varphi^{prior}$ as the transition distribution $f_{t}(z_t|z_{1:t−1}, x_{1:t−1})$ and the generation network $\\varphi^{dec}$ as the emission distribution $g_{t}(x_t|z_{1:t}, x_{1:t−1})$. With $f$ and $g$, given $x_{1:t}$, we can make 1-step prediction $x_{t+1}$ as follows:\n",
-    "\n",
-    "$$\\tilde{z}_{t+1} \\sim f_{t+1}(z_{t+1}|z_{1:t}, x_{1:t}) = \\varphi^{prior}(h_{t})$$\n",
-    "$$\\tilde{x}_{t+1} \\sim g_{t+1}(x_{t+1}|[z_{1:t}, \\tilde{z}_{t+1}], x_{1:t}) = \\varphi^{dec}(\\varphi^{z}(\\tilde{z}_{t+1}), h_{t})$$\n",
-    "$$\\tilde{h}_{t+1} = u(\\varphi^{x}(\\tilde{x}_{t+1}), \\varphi^{z}(\\tilde{z}_{t+1}), h_{t})$$\n",
-    "\n",
-    "**In our project, we made 1-step prediction as above at every timestep and obtained predicted observation $\\tilde{x}_{1:T}$.** <br>\n",
-    "One can also make $k$-step prediction by repeating the above procedures $k$ times. But as you can imagine, the prediction will become worse as steps increase."
+    "<img src=\"doc_imgs/VRNN_ELBO.png\" alt=\"Drawing\" style=\"width: 700px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"doc_imgs/VRNN_prediction.png\" alt=\"Drawing\" style=\"width: 1200px\"/>"
    ]
   },
   {
@@ -184,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -372,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -427,7 +414,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -472,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -913,6 +904,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -971,7 +963,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1257,27 +1251,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
     "## Importance Weight Auto-Encoder (IWAE)\n",
     "\n",
-    "As you may notice in the hyperparameters part of the code, there is a variable called ```n_particles``` and when ```n_particles > 1```, the model will use IWAE rather than VAE. So what is difference between IWAE and VAE, and how will it affect the performance of our model?\n",
-    "\n",
-    "IWAE is a followup of VAE. It uses the same architecture as VAE, with a recogition network $q_{\\phi}(z|x^{(i)})$ and a generative network $p_{\\theta}(x|z)$. As a reminder, the ELBO of VAE is as follows:\n",
-    "\n",
-    "<img src=\"doc_imgs/VAE_ELBO.png\" alt=\"Drawing\" style=\"width: 450px\"/>\n",
-    "\n",
-    "Instead of sampling one hidden value $z_1$ from recogition network $q_{\\phi}(z|x^{(i)})$, IWAE samples $k$ hidden values $z_1, \\dots, z_k$ and uses the following ELBO.\n",
-    "\n",
-    "<img src=\"doc_imgs/IWAE_ELBO.png\" alt=\"Drawing\" style=\"width: 450px\"/>\n",
-    "\n",
-    "Observe, when $k=1$, $\\mathcal{L}_{IWAE} = \\mathcal{L}_{VAE}$. When $k>1$, IWAE outperforms VAE by providing a tighter ELBO. It is proved that:\n",
-    "\n",
-    "$$\\log p(x) \\ge \\mathcal{L}_{IWAE,k+1} \\ge \\mathcal{L}_{IWAE,k}$$\n",
-    "<br>\n",
-    "$$\\lim_{k \\rightarrow \\infty} \\mathcal{L}_{IWAE,k} = \\log p(x)$$\n",
-    "\n",
-    "As a result, using IWAE and increase number of samples (```n_particles```) will improve the performance of our model. However, the computational resource needed increases linearly with the number of samples, and it is impossible for one to use infinite samples to achieve the optimal performance. <br>\n",
-    "Due to the limitation of time, we only finished a few experiments on some of the data."
+    "<img src=\"doc_imgs/IWAE.png\" alt=\"Drawing\" style=\"width: 1500px\"/>"
    ]
   },
   {
@@ -1446,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
