fix broken imgs

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -29,7 +29,7 @@
     "### Goal\n",
     "Time series forecasting is an important area of machine learning. There are many prediction problems in different fields that involve a time component, like economic, weather, retail sales and stock price in this project.<br>\n",
     "\n",
-    "Prediction of stcok price is always a hard task because there are many factors affecting it and most of them are hard to be extracted and quantified as number. However, with the use of Variational Recurrent Neural Network (VRNN), we can let the model learn what hidden factors are behind the observation, i.e., stock prices.<br>\n",
+    "Prediction of stock price is always a hard task because there are many factors affecting it and most of them are hard to be extracted and quantified as number. However, with the use of Variational Recurrent Neural Network (VRNN), we can let the model learn what hidden factors are behind the observation, i.e., stock prices.<br>\n",
     "\n",
     "In our project, we applied VRNN Model to stock data and then explored two improvements to further increase the prediction accuracy."
    ]
@@ -56,7 +56,7 @@
    "source": [
     "#### Recurrent Neural Network (RNN)\n",
     "\n",
-    "An popular tool to solve time series probelm is Recurrent Neural Network (RNN). An RNN can take a sequence of variables $v_{1:T}$ as inputs by recusively process each variable while maintaining its internal hidden state $h$. At each timestep $t$, the RNN takes $v_t$ and update its hidden states $h_t$ by:\n",
+    "A popular tool to solve time series problem is Recurrent Neural Network (RNN). An RNN can take a sequence of variables $v_{1:T}$ as inputs by recursively process each variable while maintaining its internal hidden state $h$. At each timestep $t$, the RNN takes $v_t$ and update its hidden states $h_t$ by:\n",
     "\n",
     "$$h_t = u(v_t, h_{t-1}),$$\n",
     "\n",
@@ -74,7 +74,7 @@
     "\n",
     "The image reference: [[vae_img](https://blog.shazam.com/learning-to-understand-music-from-shazam-56a60788b62f)]\n",
     "\n",
-    "<img src=\"doc_imgs/VAE.png\" alt=\"Drawing\" style=\"width: 1100px\"/>"
+    "<img src=\"doc_imgs/vae.png\" alt=\"Drawing\" style=\"width: 1100px\"/>"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "source": [
     "#### Variational Recurrent Neural Network (VRNN)\n",
-    "Finally, we move to the core idea behind this project, Variational Recurrent Neural Network (VRNN) [[chung2015recurrent](http://papers.nips.cc/paper/5653-a-recurrent-latent-variable-model-for-sequential-data)]. The VRNN contains a VAE at every timestep, but the VAEs are conditioned on both $x_t$ and the internal state variable $h_{t-1}$ of an RNN. This will help the VAE to take into account the temporal relationship in sequential data. In our project, long short-term memory (LSTM) is used as the RNN model.\n",
+    "Finally, we move to the core idea behind this project, Variational Recurrent Neural Network (VRNN) [[chung2015recurrent](http://papers.nips.cc/paper/5653-a-recurrent-latent-variable-model-for-sequential-data)]. The VRNN contains a VAE at every timestep, but the VAEs are conditioned on both $x_t$ and the internal state variable $h_{t-1}$ of an RNN. This will help the VAE take into account the temporal relationship in sequential data. In our project, long short-term memory (LSTM) is used as the RNN model.\n",
     "\n",
     "\n",
     "The VRNN contains following operations, and the following image is an illustration of them:\n",
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "To test the ability of VRNN to make accurate predictions, we conducted experiments with both simulation data and stock data. <br>\n",
-    "Since each experiment has its own $f$ and $g$ and requires to train a seperate VRNN model, it will take too long if the notebook runs all experiments (7 in total for VRNN). Hence, we will only show the following code demonstration for one $f$ and $g$ in detail, and results of other experiments are shown with presaved plots in the **Experiments** part after the code demonstration."
+    "Since each experiment has its own $f$ and $g$ and requires to train a separate VRNN model, it will take too long if the notebook runs all experiments (7 in total for VRNN). Hence, we will only show the following code demonstration for one $f$ and $g$ in detail, and results of other experiments are shown with pre-saved plots in the **Experiments** part after the code demonstration."
    ]
   },
   {
@@ -408,7 +408,7 @@
    "source": [
     "To evaluate the model, we let the model make 1-step prediction of the observation and check if the predicted observation is close to true observation.\n",
     "\n",
-    "The following is the true hidden states (2D) and the true observaion (1D) generated from simulation."
+    "The following is the true hidden states (2D) and the true observation (1D) generated from simulation."
    ]
   },
   {
@@ -497,7 +497,7 @@
    "metadata": {},
    "source": [
     "### Experiments\n",
-    "As mentioned above, we generated our simulation data with three sets of transition distribution $f$ and emission distribution $g$. We started from simple linear distirbutions to complicated non-linear ones. We compared the predicted value to the true value to check whether our model could learn $f$ and $g$ well.\n",
+    "As mentioned above, we generated our simulation data with three sets of transition distribution $f$ and emission distribution $g$. We started from simple linear distributions to complicated non-linear ones. We compared the predicted value to the true value to check whether our model could learn $f$ and $g$ well.\n",
     "\n",
     "### Linear\n",
     "The first f and g distribution we let our VRNN model learn is:<br>\n",
@@ -687,9 +687,9 @@
     "Finally, we applied the VRNN model to the stock data, we tested on [Dow Jones Industrial Average](https://en.wikipedia.org/wiki/Dow_Jones_Industrial_Average).\n",
     "Here, the transition distribution $f$, emission distribution $g$ and initial state distribution $\\nu$ are unknown. <br>\n",
     "The hidden spaces are also unknown. <br>\n",
-    "The observation space are 5D, which are Open, Hight, Low, Close and Adjused Close.\n",
+    "The observation space are 5D, which are Open, Hight, Low, Close and Adjusted Close.\n",
     "\n",
-    "Instead of simulation, the data set is generated by randomly selecting samples from the stock data in the last 10 years.<br>\n",
+    "Instead of simulation, the data set is generated by randomly selecting samples from the stock data in the last 10 years. <br>\n",
     "Besides, to make training easier, we scaled the stock index by their average value so that the observation values are mostly around 1 rather than something around 10000.\n",
     "\n",
     "Since we cannot compare hidden states, we can only compare the 1-step observation prediction from VRNN model and true observation."
@@ -707,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The follwing plots are some comparisons between predicted observation and true observation: <br>\n",
+    "The following plots are some comparisons between predicted observation and true observation: <br>\n",
     "Note that since the Dow Jones index won't change dramatically most of the time, all 5 dimensions of observation are quite close. To save time and the place of notebook, we just show 2 of them Open and Adjusted Close below. <br>\n",
     "\n",
     "<table>\n",
@@ -722,7 +722,7 @@
     "</table>\n",
     "\n",
     "<br>\n",
-    "**As one may notice, the prediction of stock index is close to the true values most of the time, except for the prediction at the beginning.**<br>\n",
+    "**As one may notice, the prediction of stock index is close to the true values most of the time, except for the prediction in the beginning.**<br>\n",
     "As a quantitative evaluation, the final MSE between predicted observation and true observation is 0.00111 on testing dataset, which means:\n",
     "* for 62% of the time, the prediction error in stock price change will be < 1%.\n",
     "* for 86% of the time, the prediction error in stock price change will be < 2%.\n",
@@ -734,7 +734,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
     "## Learn Initial State with the Bidirectional RNN\n",
     "As argued before, before the RNN takes any inputs, its hidden state $h_0$ is usually set as a vector of 0s. It means the initial distribution $\\nu$ is not learnable and set to some constant values. As a result, the VRNN has poor performance in the beginning. <br>\n",
     "[[sussillo2016lfads](https://arxiv.org/abs/1608.06315)] proposed a solution, i.e., learning the initial distribution $\\nu$ with the bidirectional RNN with observations as input, shown as below:\n",
@@ -950,14 +949,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "Again, we can compare how accurate the predicted observation is "
+    "Again, we compare how accurate the predicted observation is"
    ]
   },
   {
@@ -1030,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As noticed, the bidirectional RNN successfully learn the initial distribution, and the predicted observation in the beginning becomes closer to ground truth. The prediction accuracy may be poor compared to previous results, and we will explain why later."
+    "As noticed, the bidirectional RNN successfully learn the initial distribution, and the predicted observation in the beginning becomes closer to ground truth. The prediction accuracy may be poorer compared to previous results, and we will explain why later."
    ]
   },
   {
@@ -1202,7 +1199,7 @@
    "metadata": {},
    "source": [
     "### Stock\n",
-    "Though we have demonstrated our code with Dow Jones stock data above, we still want to show the experiments results with stock data. The reason is, similar to many deep networks, **the performance of our model depends on the selected random seed**. As a result, we trained our model with different random seeds and picked the one with best performance, and thus the code demonstration above may not have as good performance as results shown below."
+    "Though we have demonstrated our code with Dow Jones stock data above, we still want to show the experiments results with stock data. The reason is, like many deep networks, **the performance of our model depends on the selected random seed**. As a result, we trained our model with different random seeds and picked the one with best performance, and thus the code demonstration above may not have as good performance as results shown below."
    ]
   },
   {
@@ -1383,7 +1380,7 @@
     "* Importance Weight Auto-Encoder can be a promising technique to merge into VRNN.\n",
     "\n",
     "The encouraging results of VRNN and remained unfinished experiments on IWAE motive our group to look further into this topic. \n",
-    "* We would apply IWAE to stock data, and check how the performance improves as number of samples $k$ increases.\n",
+    "* We would apply IWAE to stock data and check how the performance improves as number of samples $k$ increases.\n",
     "* Learning from the idea of particle filtering, [[le2017auto](https://arxiv.org/abs/1705.10306)] and [[maddison2017filtering](https://arxiv.org/abs/1705.09279)] proposes models similar to IWAE but with resampling at every/a certain timestep, and those models achieve better performance on sequential data. It would be interesting to build similar models to apply to stock data and check the performance improvement."
    ]
   },
